--- a/analyses/7habitat/code/explore_glmm_logc_options.qmd
+++ b/analyses/7habitat/code/explore_glmm_logc_options.qmd
@@ -9,49 +9,36 @@ toc: true
 toc-expand: 3
 ---
 
-# Overview
-
-Diagnostics from initial models demonstrated moderate issues with kurtosis, nonlinearity, and heteroskedasticity. The goal of this comparison is to explore whether other modeling options improve these issues. The first focal species is vermillion rockfish (Sebastes miniatus), a species found statewide that is generally associated with hard bottom habitat. This was chosen because it has two int
-
-The original approach was:
-
-Generalized linear mixed effects models with all numeric variables scaled (including dep. variable, first log+1 transformed then scaled to mean = 0 and sd = 1). The variables were scaled to accommodate differences in scales between MPA age and the habitat variables, and the magnitude between the various buffer scales now that multiple scales could be included in the same models (e.g. hard bottom at 500m and kelp at 25m, varying from 10s of sq meters to millions of sq meters).
-
-The top model for this species was:
-
-Log+1-Transformed Biomass \~ Hard Bottom 500m \* Site Type + Kelp Annual 100m \* Site Type + Site Type \* MPA Age
-
-```         
--   Does log-transforming biomass make a difference in model fit? Is there a difference between using no transformation, log+1, vs. log+c, where c is a very small constant (10x smaller than the smallest nonzero vale)
-
--   Does scaling the variables (mean = 0 and sd = 1) make a difference in conclusions or model fit?
-
--   Does adding a 3-way interaction with MPA age make a difference in model fit?
-```
 
 ```{r}
 #| echo: false
 #| message: false
 #| warning: false
 
-library(lme4)
+# library(lme4)
 library(MuMIn)
-library(dplyr)
-library(purrr)
-library(tidymodels)
+# library(dplyr)
+# library(purrr)
+# library(tidymodels)
 library(mgcv)
-library(performance)
-library(patchwork)
-library(tidyverse)
-library(broom.mixed)
-library(effects)
-library(lmerTest)
+# library(performance)
+# library(patchwork)
+# library(tidyverse)
+# library(broom.mixed)
+# library(effects)
+# library(lmerTest)
 library(MASS)
-library(sjPlot)
+# library(sjPlot)
 
-
+# Server directories
 ltm.dir <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/update_2024"
-pred_kelp <- readRDS(file.path("/home/lopazanski/ca-mpa/analyses/7habitat/intermediate_data/kelp_predictors.Rds")) %>%
+int.dir <- "analyses/7habitat/intermediate_data/"
+
+# Correct for local directories (BZE)
+ltm.dir <- "/Users/lopazanski/Desktop/ltm/update_2024"
+
+# Read Data
+pred_kelp <- readRDS(file.path(int.dir, "kelp_predictors.Rds")) %>%
   filter(pred_group %in% c("all", "combined"))
 
 data_kelp <- readRDS(file.path(ltm.dir, "combine_tables/kelp_full.Rds")) %>% 
@@ -59,6 +46,11 @@ data_kelp <- readRDS(file.path(ltm.dir, "combine_tables/kelp_full.Rds")) %>%
   dplyr::select(year:affiliated_mpa, size_km2, age_at_survey,
                 species_code:target_status, assemblage_new, weight_kg:count_per_m2, log_kg_per_m2,
                 all_of(pred_kelp$predictor)) %>% 
+  mutate(depth_cv_25  = depth_sd_25/depth_mean_25*100,
+         depth_cv_50  = depth_sd_50/depth_mean_50*100,
+         depth_cv_100 = depth_sd_100/depth_mean_100*100,
+         depth_cv_250 = depth_sd_250/depth_mean_250*100,
+         depth_cv_500 = depth_sd_500/depth_mean_500*100) %>% 
   filter(species_code == "SMIN") %>%  # Focus on SMIN or SMYS
   mutate(bioregion = factor(bioregion),
          affiliated_mpa = factor(affiliated_mpa)) %>% 
@@ -80,10 +72,10 @@ data_sp <- data_kelp  %>%
     log_kg_per_m2_c = log(kg_per_m2_c),
     sqrt_kg_per_m2 = sqrt(kg_per_m2)) %>% 
   mutate(year = as.factor(year),
-           bioregion = as.factor(bioregion),
-           affiliated_mpa = as.factor(affiliated_mpa)) %>% 
-    # Scale all predictors 
-    mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
 
 # Box-Cox
 model <- lm(kg_per_m2_c ~ age_at_survey * site_type, data = data_sp)
@@ -95,10 +87,21 @@ data_sp$bc_kg_per_m2 <- if (best_lambda >= -2 && best_lambda <= 2){(data_sp$kg_p
 
 data_sp$lambda <- if (best_lambda >= -2 && best_lambda <= 2) {best_lambda} else {NA}
    
-# Scale data except the outcome?
-data_sp_scaled <- data_sp %>% 
-  mutate(across(setdiff(names(dplyr::select(., where(is.numeric))), c("log_kg_per_m2_c", "kg_per_m2", "bc_kg_per_m2")), scale))
 ```
+```{r}
+# Examine the full models
+response_logc <- "log_kg_per_m2_c"
+random_effects <- c("year", "affiliated_mpa", "bioregion")
+
+p1 <-  "hard_bottom_500 * site_type + kelp_annual_500 * site_type + depth_cv_500 * site_type + site_type * age_at_survey"
+f1 <- as.formula(paste(response_logc, "~", p1, "+", paste0("(1 | ", random_effects, ")", collapse = " + ")))
+
+
+m1 <- lmerTest::lmer(f1, data = data_sp, REML = FALSE)
+attr(m1, "name") <- name1
+```
+
+
 
 
 ```{r}
@@ -141,59 +144,54 @@ name8 <- "SqRt ~ 3way"
 
 ```
 
-
 # Log + Small Constant Transformation
 
 ```{r}
-glm1 <- lmer(form1, data = data_sp, REML = FALSE)
-attr(glm1, "name") <- name1
+m1 <- lmer(form1, data = data_sp, REML = FALSE)
+attr(m1, "name") <- name1
 
-glm2 <- lmer(form2, data = data_sp, REML = FALSE)
-attr(glm2, "name") <- name2
+m2 <- lmer(m2, data = data_sp, REML = FALSE)
+attr(m2, "name") <- name2
 ```
 
 # BoxCox (if lambda isn't close to zero?)
 
 ```{r}
-glm3 <- lmer(form3, data = data_sp, REML = FALSE)
-attr(glm3, "name") <- name3
+m3 <- lmer(form3, data = data_sp, REML = FALSE)
+attr(m3, "name") <- name3
 
-glm4 <- lmer(form4, data = data_sp, REML = FALSE)
-attr(glm4, "name") <- name4
+m4 <- lmer(form4, data = data_sp, REML = FALSE)
+attr(m4, "name") <- name4
 
 ```
 
 # Raw (no transformation)
 
 ```{r}
-glm5 <- lmer(form5, data = data_sp, REML = FALSE)
-attr(glm5, "name") <- name5
+m5 <- lmer(form5, data = data_sp, REML = FALSE)
+attr(m5, "name") <- name5
 
-glm6 <- lmer(form6, data = data_sp, REML = FALSE)
-attr(glm6, "name") <- name6
+m6 <- lmer(form6, data = data_sp, REML = FALSE)
+attr(m6, "name") <- name6
 
 ```
 
 # Square Root
 
 ```{r}
-glm7 <- lmer(form7, data = data_sp, REML = FALSE)
-attr(glm7, "name") <- name7
+m7 <- lmer(form7, data = data_sp, REML = FALSE)
+attr(m7, "name") <- name7
 
-glm8 <- lmer(form8, data = data_sp, REML = FALSE)
-attr(glm8, "name") <- name8
+m8 <- lmer(form8, data = data_sp, REML = FALSE)
+attr(m8, "name") <- name8
 
 ```
-
-
-
 
 # Compare
 
 ```{r}
-tab_model(glm1, glm3, glm5, glm7, glm2, glm4, glm6, glm8, digits = 3)
+tab_model(m1, m3, m5, m7, m2, m4, m6, m8, digits = 3)
 ```
-
 
 # Comparison & Diagnostics
 
@@ -204,14 +202,14 @@ tab_model(glm1, glm3, glm5, glm7, glm2, glm4, glm6, glm8, digits = 3)
 #| out.width: "100%"
 #| message: FALSE
 
-model_fit <- bind_rows(model_performance(glm1, estimator = "ML") %>% mutate(Model = attr(glm1, "name")),
-                       model_performance(glm2, estimator = "ML") %>% mutate(Model = attr(glm2, "name")),
-                       model_performance(glm3, estimator = "ML") %>% mutate(Model = attr(glm3, "name")),
-                       model_performance(glm4, estimator = "ML") %>% mutate(Model = attr(glm4, "name")),
-                       model_performance(glm5, estimator = "ML") %>% mutate(Model = attr(glm5, "name")),
-                       model_performance(glm6, estimator = "ML") %>% mutate(Model = attr(glm6, "name")),
-                       model_performance(glm7, estimator = "ML") %>% mutate(Model = attr(glm7, "name")),
-                       model_performance(glm8, estimator = "ML") %>% mutate(Model = attr(glm8, "name"))
+model_fit <- bind_rows(model_performance(m1, estimator = "ML") %>% mutate(Model = attr(m1, "name")),
+                       model_performance(m2, estimator = "ML") %>% mutate(Model = attr(m2, "name")),
+                       model_performance(m3, estimator = "ML") %>% mutate(Model = attr(m3, "name")),
+                       model_performance(m4, estimator = "ML") %>% mutate(Model = attr(m4, "name")),
+                       model_performance(m5, estimator = "ML") %>% mutate(Model = attr(m5, "name")),
+                       model_performance(m6, estimator = "ML") %>% mutate(Model = attr(m6, "name")),
+                       model_performance(m7, estimator = "ML") %>% mutate(Model = attr(m7, "name")),
+                       model_performance(m8, estimator = "ML") %>% mutate(Model = attr(m8, "name"))
                        ) %>% 
   dplyr::select(Model, everything()) %>% 
   arrange(AIC)
@@ -228,31 +226,28 @@ print(model_fit)
 
 par(mfrow = c(2, 4)) 
 
-plot(residuals(glm1) ~ fitted(glm1), main = attr(glm1, "name"))
+plot(residuals(m1) ~ fitted(m1), main = attr(m1, "name"))
 abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm1), residuals(glm1)), col = "blue", lwd = 2)
+lines(lowess(fitted(m1), residuals(m1)), col = "blue", lwd = 2)
 
-plot(residuals(glm3) ~ fitted(glm3), main = attr(glm3, "name"))
+plot(residuals(m3) ~ fitted(m3), main = attr(m3, "name"))
 abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm3), residuals(glm3)), col = "blue", lwd = 2)
+lines(lowess(fitted(m3), residuals(m3)), col = "blue", lwd = 2)
 
-plot(residuals(glm5) ~ fitted(glm5), main = attr(glm5, "name"))
+plot(residuals(m5) ~ fitted(m5), main = attr(m5, "name"))
 abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm5), residuals(glm5)), col = "blue", lwd = 2)
+lines(lowess(fitted(m5), residuals(m5)), col = "blue", lwd = 2)
 
-plot(residuals(glm7) ~ fitted(glm7), main = attr(glm7, "name"))
+plot(residuals(m7) ~ fitted(m7), main = attr(m7, "name"))
 abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm7), residuals(glm7)), col = "blue", lwd = 2)
+lines(lowess(fitted(m7), residuals(m7)), col = "blue", lwd = 2)
 
-qqnorm(residuals(glm1), main = paste(attr(glm1, "name")), cex.main = 0.8); qqline(residuals(glm1))
-qqnorm(residuals(glm3), main = paste(attr(glm3, "name")), cex.main = 0.8); qqline(residuals(glm3))
-qqnorm(residuals(glm5), main = paste(attr(glm5, "name")), cex.main = 0.8); qqline(residuals(glm5))
-qqnorm(residuals(glm7), main = paste(attr(glm7, "name")), cex.main = 0.8); qqline(residuals(glm7))
+qqnorm(residuals(m1), main = paste(attr(m1, "name")), cex.main = 0.8); qqline(residuals(m1))
+qqnorm(residuals(m3), main = paste(attr(m3, "name")), cex.main = 0.8); qqline(residuals(m3))
+qqnorm(residuals(m5), main = paste(attr(m5, "name")), cex.main = 0.8); qqline(residuals(m5))
+qqnorm(residuals(m7), main = paste(attr(m7, "name")), cex.main = 0.8); qqline(residuals(m7))
 
 ```
-
-
-
 
 ## Normal QQ
 
@@ -262,26 +257,26 @@ qqnorm(residuals(glm7), main = paste(attr(glm7, "name")), cex.main = 0.8); qqlin
 
 par(mfrow = c(2, 4)) 
 
-plot(residuals(glm2) ~ fitted(glm2), main = attr(glm2, "name"))
+plot(residuals(m2) ~ fitted(m2), main = attr(m2, "name"))
 abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm2), residuals(glm2)), col = "blue", lwd = 2)
+lines(lowess(fitted(m2), residuals(m2)), col = "blue", lwd = 2)
 
-plot(residuals(glm4) ~ fitted(glm4), main = attr(glm4, "name"))
+plot(residuals(m4) ~ fitted(m4), main = attr(m4, "name"))
 abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm4), residuals(glm4)), col = "blue", lwd = 2)
+lines(lowess(fitted(m4), residuals(m4)), col = "blue", lwd = 2)
 
-plot(residuals(glm6) ~ fitted(glm6), main = attr(glm6, "name"))
+plot(residuals(m6) ~ fitted(m6), main = attr(m6, "name"))
 abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm6), residuals(glm6)), col = "blue", lwd = 2)
+lines(lowess(fitted(m6), residuals(m6)), col = "blue", lwd = 2)
 
-plot(residuals(glm8) ~ fitted(glm8), main = attr(glm8, "name"))
+plot(residuals(m8) ~ fitted(m8), main = attr(m8, "name"))
 abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm8), residuals(glm8)), col = "blue", lwd = 2)
+lines(lowess(fitted(m8), residuals(m8)), col = "blue", lwd = 2)
 
-qqnorm(residuals(glm2), main = paste(attr(glm2, "name")), cex.main = 0.8); qqline(residuals(glm2))
-qqnorm(residuals(glm4), main = paste(attr(glm4, "name")), cex.main = 0.8); qqline(residuals(glm4))
-qqnorm(residuals(glm6), main = paste(attr(glm6, "name")), cex.main = 0.8); qqline(residuals(glm6))
-qqnorm(residuals(glm8), main = paste(attr(glm8, "name")), cex.main = 0.8); qqline(residuals(glm8))
+qqnorm(residuals(m2), main = paste(attr(m2, "name")), cex.main = 0.8); qqline(residuals(m2))
+qqnorm(residuals(m4), main = paste(attr(m4, "name")), cex.main = 0.8); qqline(residuals(m4))
+qqnorm(residuals(m6), main = paste(attr(m6, "name")), cex.main = 0.8); qqline(residuals(m6))
+qqnorm(residuals(m8), main = paste(attr(m8, "name")), cex.main = 0.8); qqline(residuals(m8))
 
 ```
 
@@ -290,15 +285,13 @@ qqnorm(residuals(glm8), main = paste(attr(glm8, "name")), cex.main = 0.8); qqlin
 ```{r}
 
 ```
-
-
 :::
 
 # Partial Residual Plots
 
 ```{r}
 
-model <- glm1
+model <- m1
 plot(predictorEffects(model, ~ age_at_survey, partial.residuals = TRUE),
      id = list(n = 1), residuals.pch = 19, residuals.cex = 0.2)
      
@@ -312,7 +305,7 @@ plot(predictorEffects(model, ~ hard_bottom_25, partial.residuals = TRUE),
 #| out.width: "100%"
 #| message: FALSE
 
-model <- glm1
+model <- m1
 plot(predictorEffects(model, ~ age_at_survey, partial.residuals = TRUE),
      id = list(n = 1), residuals.pch = 19, residuals.cex = 0.2)
      
@@ -328,7 +321,7 @@ plot(predictorEffects(model, ~ hard_bottom_25, partial.residuals = TRUE),
 #| fig.width: 8
 #| fig.height: 4
 
-model <- glm2
+model <- m2
 plot(predictorEffects(model, ~ age_at_survey, partial.residuals = TRUE),
      axes = list(x = list(cex = 0.5), y = list(cex = 0.5)),
      lattice = list(strip = list(cex = 0.5)),
@@ -340,7 +333,6 @@ plot(predictorEffects(model, ~ hard_bottom_25, partial.residuals = TRUE),
      id = list(n = 1), residuals.pch = 19, residuals.cex = 0.2)
 
 ```
-
 
 ## box-cox, 2-way
 
@@ -348,7 +340,7 @@ plot(predictorEffects(model, ~ hard_bottom_25, partial.residuals = TRUE),
 #| out.width: "100%"
 #| message: FALSE
 
-model <- glm3
+model <- m3
 plot(predictorEffects(model, ~ age_at_survey, partial.residuals = TRUE),
      id = list(n = 1), residuals.pch = 19, residuals.cex = 0.2)
      
@@ -357,14 +349,14 @@ plot(predictorEffects(model, ~ hard_bottom_25, partial.residuals = TRUE),
 
 ```
 
-## box-cox,  3-way
+## box-cox, 3-way
 
 ```{r}
 #| out.width: "100%"
 #| fig.width: 8
 #| fig.height: 4
 
-model <- glm4
+model <- m4
 plot(predictorEffects(model, ~ age_at_survey, partial.residuals = TRUE),
      axes = list(x = list(cex = 0.5), y = list(cex = 0.5)),
      lattice = list(strip = list(cex = 0.5)),
@@ -376,128 +368,3 @@ plot(predictorEffects(model, ~ hard_bottom_25, partial.residuals = TRUE),
      id = list(n = 1), residuals.pch = 19, residuals.cex = 0.2)
 
 ```
-
-
-# On Scaled Data (for Comparison)
-
-## `log(B+c) ~ H*ST + K*ST + ST*A`
-
-```{r}
-
-glm5<- lmer(log_kg_per_m2_c ~ hard_bottom_25 * site_type + site_type * age_at_survey +
-               (1|bioregion) + (1|affiliated_mpa) + (1|year), data = data_sp_scaled, REML = FALSE)
-
-attr(glm5, "name") <- "log(B+c) ~ H*ST + ST*A"
-
-summary(glm5)
-
-```
-
-
-## `log(B+c) ~ H*ST*A + K*ST*A`
-
-```{r}
-glm6 <- lmer(log_kg_per_m2_c ~ hard_bottom_25 * site_type * age_at_survey +
-               (1|bioregion) + (1|affiliated_mpa) + (1|year), data = data_sp_scaled, REML = FALSE)
-
-attr(glm6, "name") <- "log(B+c) ~ H*ST*A"
-
-summary(glm6)
-```
-
-## `BoxCox ~ H*ST + ST*A`
-```{r}
-glm7 <- lmer(bc_kg_per_m2 ~ hard_bottom_25 * site_type + site_type * age_at_survey +
-               (1|bioregion) + (1|affiliated_mpa) + (1|year), data = data_sp_scaled, REML = FALSE)
-
-attr(glm7, "name") <- "BoxCox ~ H*ST + ST*A"
-
-summary(glm7)
-```
-
-## `BoxCox ~ H*ST*A`
-
-```{r}
-
-glm8 <- lmer(bc_kg_per_m2 ~ hard_bottom_25 * site_type * age_at_survey +
-               (1|bioregion) + (1|affiliated_mpa) + (1|year), data = data_sp_scaled, REML = FALSE)
-
-attr(glm8, "name") <- "BoxCox ~ H*ST*A"
-
-summary(glm8)
-
-```
-
-# Comparison & Diagnostics
-
-::: {.panel-tabset .nav-pills}
-
-## Comparison
-
-```{r}
-model_fit3 <- bind_rows(model_performance(glm5, estimator = "ML") %>% mutate(Model = attr(glm5, "name")),
-                       model_performance(glm6, estimator = "ML") %>% mutate(Model = attr(glm6, "name"))) %>% 
-  mutate(deltaAIC = AIC - min(AIC, na.rm = T)) %>% 
-  dplyr::select(Model, everything()) %>% 
-  arrange(AIC)
-
-print(model_fit3)
-
-model_fit4 <- bind_rows(model_performance(glm7, estimator = "ML") %>% mutate(Model = attr(glm7, "name")),
-                       model_performance(glm8, estimator = "ML") %>% mutate(Model = attr(glm8, "name"))) %>% 
-  mutate(deltaAIC = AIC - min(AIC, na.rm = T)) %>% 
-  dplyr::select(Model, everything()) %>% 
-  arrange(AIC)
-
-print(model_fit4)
-```
-
-## Residuals vs Fitted
-
-```{r}
-par(mfrow = c(2, 2)) 
-
-plot(residuals(glm5) ~ fitted(glm5), main = attr(glm5, "name"))
-abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm5), residuals(glm5)), col = "blue", lwd = 2)
-
-plot(residuals(glm6) ~ fitted(glm6), main = attr(glm6, "name"))
-abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm6), residuals(glm6)), col = "blue", lwd = 2)
-
-plot(residuals(glm7) ~ fitted(glm7), main = attr(glm7, "name"))
-abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm7), residuals(glm7)), col = "blue", lwd = 2)
-
-plot(residuals(glm8) ~ fitted(glm4), main = attr(glm8, "name"))
-abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(glm8), residuals(glm8)), col = "blue", lwd = 2)
-```
-
-## Normal QQ
-
-```{r}
-#| fig.width: 5
-#| fig.height: 5
-par(mfrow = c(2, 2)) 
-
-qqnorm(residuals(glm5), main = paste(attr(glm5, "name")), cex.main = 0.8); qqline(residuals(glm5))
-qqnorm(residuals(glm6), main = paste(attr(glm6, "name")), cex.main = 0.8); qqline(residuals(glm6))
-qqnorm(residuals(glm7), main = paste(attr(glm7, "name")), cex.main = 0.8); qqline(residuals(glm7))
-qqnorm(residuals(glm8), main = paste(attr(glm8, "name")), cex.main = 0.8); qqline(residuals(glm8))
-```
-
-:::
-
-## Performance
-
-```{r}
-library(sjPlot)
-
-tab_model(glm1, glm2, glm3, glm4, glm5, glm6, glm7, glm8, digits = 3)
-```
-
-
-
-
-
