--- a/analyses/7habitat/code/misc/explore_glmm_logc_options.qmd
+++ b/analyses/7habitat/code/misc/explore_glmm_logc_options.qmd
@@ -32,7 +32,7 @@ library(sjPlot)
 
 # Server directories
 ltm.dir <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/update_2024"
-int.dir <- "analyses/7habitat/intermediate_data/"
+int.dir <- "~/ca-mpa/analyses/7habitat/intermediate_data"
 
 # Correct for local directories (BZE)
 ltm.dir <- "/Users/lopazanski/Desktop/ltm/update_2024"
@@ -46,13 +46,9 @@ data_kelp <- readRDS(file.path(ltm.dir, "combine_tables/kelp_full.Rds")) %>%
   dplyr::select(year:affiliated_mpa, size_km2, age_at_survey,
                 species_code:target_status, assemblage_new, weight_kg:count_per_m2, log_kg_per_m2,
                 any_of(pred_kelp$predictor)) %>% 
-  mutate(depth_cv_25  = depth_sd_25/depth_mean_25*100,
-         depth_cv_50  = depth_sd_50/depth_mean_50*100,
-         depth_cv_100 = depth_sd_100/depth_mean_100*100,
-         depth_cv_250 = depth_sd_250/depth_mean_250*100,
-         depth_cv_500 = depth_sd_500/depth_mean_500*100) %>% 
   filter(species_code == "SMIN") %>%  # Focus on SMIN or SMYS
-  mutate(bioregion = factor(bioregion),
+  mutate(year = factor(year),
+         bioregion = factor(bioregion),
          affiliated_mpa = factor(affiliated_mpa)) %>% 
   mutate(obs_id = row_number(.))
 
@@ -219,7 +215,7 @@ name16 <- "Positive Log g per m2 ~ 3way"
 m1 <- lmer(form1, data = data_sp, REML = FALSE)
 attr(m1, "name") <- name1
 
-m2 <- lmer(m2, data = data_sp, REML = FALSE)
+m2 <- lmer(form2, data = data_sp, REML = FALSE)
 attr(m2, "name") <- name2
 ```
 
@@ -259,10 +255,14 @@ attr(m8, "name") <- name8
 # Gamma
 
 ```{r}
-m9 <- glmer(form9, family = Gamma(link = "log"), data = data_sp)
+m9 <- glmer(form9, family = Gamma(link = "log"),
+            control = glmerControl(optCtrl = list(maxfun = 1e6)),
+            data = data_sp)
 attr(m9, "name") <- name9
 
-m10 <- glmer(form10, family = Gamma(link = "log"), data = data_sp)
+m10 <- glmer(form10, family = Gamma(link = "log"), 
+             control = glmerControl(optCtrl = list(maxfun = 1e9)),
+             data = data_sp)
 attr(m10, "name") <- name10
 ```
 
@@ -314,7 +314,7 @@ model_fit <- bind_rows(model_performance(m1, estimator = "ML") %>% mutate(Model 
                        model_performance(m5, estimator = "ML") %>% mutate(Model = attr(m5, "name")),
                        model_performance(m6, estimator = "ML") %>% mutate(Model = attr(m6, "name")),
                        model_performance(m7, estimator = "ML") %>% mutate(Model = attr(m7, "name")),
-                       model_performance(m8, estimator = "ML") %>% mutate(Model = attr(m8, "name"))
+                       model_performance(m8, estimator = "ML") %>% mutate(Model = attr(m8, "name")),
                     model_performance(m9, estimator = "ML") %>% mutate(Model = attr(m9, "name")),
                        model_performance(m10, estimator = "ML") %>% mutate(Model = attr(m10, "name")),
                        model_performance(m11, estimator = "ML") %>% mutate(Model = attr(m11, "name")),
@@ -334,7 +334,7 @@ print(model_fit)
 #| fig.width: 14
 #| fig.height: 6
 
-par(mfrow = c(2, 7)) 
+par(mfrow = c(2, 4)) 
 
 plot(residuals(m1) ~ fitted(m1), main = attr(m1, "name"))
 abline(h = 0, col = "red", lty = 2)
@@ -391,13 +391,9 @@ qqnorm(residuals(m8), main = paste(attr(m8, "name")), cex.main = 0.8); qqline(re
 ```
 
 ```{r}
-plot(residuals(m1) ~ fitted(m1), main = attr(m1, "name"), cex.main = 0.8)
-abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(m1), residuals(m1)), col = "blue", lwd = 2)
-
-plot(residuals(m3) ~ fitted(m3), main = attr(m3, "name"), cex.main = 0.8)
-abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(m3), residuals(m3)), col = "blue", lwd = 2)
+#| fig.width: 14
+#| fig.height: 8
+par(mfrow = c(2, 6)) 
 
 plot(residuals(m5) ~ fitted(m5), main = attr(m5, "name"), cex.main = 0.8)
 abline(h = 0, col = "red", lty = 2)
@@ -407,10 +403,6 @@ plot(residuals(m7) ~ fitted(m7), main = attr(m7, "name"), cex.main = 0.8)
 abline(h = 0, col = "red", lty = 2)
 lines(lowess(fitted(m7), residuals(m7)), col = "blue", lwd = 2)
 
-plot(residuals(m9) ~ fitted(m9), main = attr(m9, "name"), cex.main = 0.8)
-abline(h = 0, col = "red", lty = 2)
-lines(lowess(fitted(m9), residuals(m9)), col = "blue", lwd = 2)
-
 plot(residuals(m11) ~ fitted(m11), main = attr(m11, "name"), cex.main = 0.8)
 abline(h = 0, col = "red", lty = 2)
 lines(lowess(fitted(m11), residuals(m11)), col = "blue", lwd = 2)
@@ -419,20 +411,28 @@ plot(residuals(m13) ~ fitted(m13), main = attr(m13, "name"), cex.main = 0.8)
 abline(h = 0, col = "red", lty = 2)
 lines(lowess(fitted(m13), residuals(m13)), col = "blue", lwd = 2)
 
-qqnorm(residuals(m1), main = paste(attr(m1, "name")), cex.main = 0.8); qqline(residuals(m1))
-qqnorm(residuals(m3), main = paste(attr(m3, "name")), cex.main = 0.8); qqline(residuals(m3))
+plot(residuals(m1) ~ fitted(m1), main = attr(m1, "name"), cex.main = 0.8)
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(m1), residuals(m1)), col = "blue", lwd = 2)
+
+plot(residuals(m3) ~ fitted(m3), main = attr(m3, "name"), cex.main = 0.8)
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(m3), residuals(m3)), col = "blue", lwd = 2)
+
+
 qqnorm(residuals(m5), main = paste(attr(m5, "name")), cex.main = 0.8); qqline(residuals(m5))
 qqnorm(residuals(m7), main = paste(attr(m7, "name")), cex.main = 0.8); qqline(residuals(m7))
-qqnorm(residuals(m9), main = paste(attr(m9, "name")), cex.main = 0.8); qqline(residuals(m9))
 qqnorm(residuals(m11), main = paste(attr(m11, "name")), cex.main = 0.8); qqline(residuals(m11))
 qqnorm(residuals(m13), main = paste(attr(m13, "name")), cex.main = 0.8); qqline(residuals(m13))
+qqnorm(residuals(m1), main = paste(attr(m1, "name")), cex.main = 0.8); qqline(residuals(m1))
+qqnorm(residuals(m3), main = paste(attr(m3, "name")), cex.main = 0.8); qqline(residuals(m3))
 
 ```
 
 # Partial Residual Plots
 
 ```{r}
-model <- m1
+model <- m13
     
 plot(predictorEffects(model, ~ hard_bottom_500 + age_at_survey, partial.residuals = TRUE), 
      id = list(n = 1), residuals.pch = 19, residuals.cex = 0.2)
