--- a/analyses/7habitat/code/misc/explore_glmm_logc_options.qmd
+++ b/analyses/7habitat/code/misc/explore_glmm_logc_options.qmd
@@ -24,18 +24,18 @@ library(sjPlot)
 # library(purrr)
 # library(tidymodels)
 # library(mgcv)
-# library(performance)
+library(performance)
 # library(patchwork)
 # library(broom.mixed)
-# library(effects)
-# library(lmerTest)
+library(effects)
+library(lmerTest)
 
 # Server directories
 ltm.dir <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/update_2024"
 int.dir <- "~/ca-mpa/analyses/7habitat/intermediate_data"
 
 # Correct for local directories (BZE)
-ltm.dir <- "/Users/lopazanski/Desktop/ltm/update_2024"
+#ltm.dir <- "/Users/lopazanski/Desktop/ltm/update_2024"
 
 # Read Data
 pred_kelp <- readRDS(file.path(int.dir, "kelp_predictors.Rds")) %>%
@@ -46,9 +46,10 @@ data_kelp <- readRDS(file.path(ltm.dir, "combine_tables/kelp_full.Rds")) %>%
   dplyr::select(year:affiliated_mpa, size_km2, age_at_survey,
                 species_code:target_status, assemblage_new, weight_kg:count_per_m2, log_kg_per_m2,
                 any_of(pred_kelp$predictor)) %>% 
-  filter(species_code == "SMIN") %>%  # Focus on SMIN or SMYS
+  filter(species_code == "SMYS") %>%  # Focus on SMIN or SMYS
   mutate(year = factor(year),
          bioregion = factor(bioregion),
+         region4 = factor(region4),
          affiliated_mpa = factor(affiliated_mpa)) %>% 
   mutate(obs_id = row_number(.))
 
@@ -59,14 +60,19 @@ data_kelp <- readRDS(file.path(ltm.dir, "combine_tables/kelp_full.Rds")) %>%
 ```{r}
 # Define constant = minimum nonzero biomass
 const <- min(data_kelp$kg_per_m2[data_kelp$kg_per_m2 > 0])
+const100 <- const*100
 
 data_sp <- data_kelp  %>% 
   mutate(
+    kg_per_100m2 = kg_per_m2 * 100,
+    kg_per_100m2_c = kg_per_100m2 + const100,
     # Add small constant 
     kg_per_m2_c = kg_per_m2 + const,
     # Log-transform to variable with small constant
     log_kg_per_m2_c = log(kg_per_m2_c),
-    sqrt_kg_per_m2 = sqrt(kg_per_m2)) %>% 
+    sqrt_kg_per_m2 = sqrt(kg_per_m2),
+    log_kg_per_100m2_c = log(kg_per_100m2_c),
+    sqrt_kg_per_100m2 = sqrt(kg_per_100m2)) %>% 
   mutate(year = as.factor(year),
          bioregion = as.factor(bioregion),
          affiliated_mpa = as.factor(affiliated_mpa)) %>% 
@@ -507,3 +513,351 @@ plot(predictorEffects(model, ~ hard_bottom_25, partial.residuals = TRUE),
 
 ```
 :::
+
+# Show the plots for the regions separately for SMYS
+
+```{r}
+# Define constant = minimum nonzero biomass
+const <- data_kelp %>% 
+  filter(kg_per_m2 > 0) %>% 
+  group_by(bioregion) %>% 
+  summarize(min = min(kg_per_m2)*10)
+
+const_s <- const$min[const$bioregion == "South"]
+const_c <- const$min[const$bioregion == "Central"]
+const_n <- const$min[const$bioregion == "North"]
+
+const4 <- data_kelp %>% 
+  filter(kg_per_m2 > 0) %>% 
+  group_by(region4) %>% 
+  summarize(min = min(kg_per_m2)*10)
+
+const4_s  <- const4$min[const4$region4 == "South"]
+const4_c  <- const4$min[const4$region4 == "Central"]
+const4_n  <- const4$min[const4$region4 == "North"]
+const4_ci <- const4$min[const4$region4 == "N. Channel Islands"]
+
+data_south <- data_kelp %>% 
+  filter(bioregion == "South") %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const_s)) %>% 
+  mutate(year = as.factor(year),
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+data_central <- data_kelp %>% 
+  filter(bioregion == "Central") %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const_c)) %>% 
+  mutate(year = as.factor(year),
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+data_north <- data_kelp %>% 
+  filter(bioregion == "North") %>%
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const_n)) %>% 
+  mutate(year = as.factor(year),
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+# Set up the formula
+response_logc <- "log_kg_per_m2_c"
+random_effects <- c("year", "affiliated_mpa")
+
+smys <- "depth_cv_500 * site_type + kelp_annual_500 * site_type + hard_bottom_250 * site_type + site_type * age_at_survey"
+
+form_smys <- as.formula(paste(response_logc, "~", smys, "+", paste0("(1 | ", random_effects, ")", collapse = " + ")))
+
+ms <- lmerTest::lmer(form_smys, data = data_south)
+attr(ms, "name") <- "South"
+
+mc <- lmer(form_smys, data = data_central)
+attr(mc, "name") <- "Central"
+
+mn <- lmer(form_smys, data = data_north)
+attr(mn, "name") <- "North"
+
+
+check_model(ms, residual_type = "simulated", check = c("ncv", "qq", "normality", "vif"))
+check_model(mc, residual_type = "simulated", check = c("ncv", "qq", "normality", "vif"))
+check_model(mn, residual_type = "simulated", check = c("ncv", "qq", "normality", "vif"))
+
+```
+
+```{r}
+par(mfrow = c(2, 3)) 
+
+plot(residuals(ms) ~ fitted(ms), main = attr(ms, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(ms), residuals(ms)), col = "blue", lwd = 2)
+
+plot(residuals(mc) ~ fitted(mc), main = attr(mc, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(mc), residuals(mc)), col = "blue", lwd = 2)
+
+plot(residuals(mn) ~ fitted(mn), main = attr(mn, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(mn), residuals(mn)), col = "blue", lwd = 2)
+
+qqnorm(residuals(ms), main = paste(attr(ms, "name")), cex.main = 0.8); qqline(residuals(ms))
+qqnorm(residuals(mc), main = paste(attr(mc, "name")), cex.main = 0.8); qqline(residuals(mc))
+qqnorm(residuals(mn), main = paste(attr(mn, "name")), cex.main = 0.8); qqline(residuals(mn))
+
+```
+
+```{r}
+data4_ci <- data_kelp %>% 
+  filter(region4 == "N. Channel Islands") %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const4_ci)) %>% 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+data4_south <- data_kelp %>% 
+  filter(region4 == "South") %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const4_s)) %>% 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+data4_central <- data_kelp %>% 
+  filter(region4 == "Central") %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const4_c)) %>% 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+data4_north <- data_kelp %>% 
+  filter(region4 == "North") %>%
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const4_n)) %>% 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+const_drop_ci <- data_kelp %>% 
+  filter(!region4 == "N. Channel Islands") %>% 
+  filter(kg_per_m2 > 0) %>% 
+  pull(kg_per_m2) %>% 
+  min(.)
+
+const_drop_s <- data_kelp %>% 
+  filter(!region4 == "South") %>% 
+  filter(kg_per_m2 > 0) %>% 
+  pull(kg_per_m2) %>% 
+  min(.)
+
+data4_drop_ci <- data_kelp %>% 
+  filter(!region4 == "N. Channel Islands") %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const_drop_ci)) %>% 
+  mutate(year = as.factor(year),
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+data4_drop_s <- data_kelp %>% 
+  filter(!region4 == "South") %>%
+  filter(!affiliated_mpa == "anacapa island smr") %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const_drop_s)) %>% 
+  mutate(year = as.factor(year),
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+data_subset <- data_sp %>% 
+  group_by(bioregion, region4, affiliated_mpa, site) %>% 
+  summarize(total = sum(kg_per_100m2),
+            total_count = sum(count)) %>% 
+  filter(total_count < 10) 
+
+data_drop_sites <- data_kelp %>% 
+  filter(!region4 == "South") %>% 
+  filter(!site %in% data_subset$site) %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const_s)) %>% 
+  mutate(year = as.factor(year),
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+  
+
+smys <- "depth_cv_500 * site_type + kelp_annual_500 * site_type + hard_bottom_250 * site_type + site_type * age_at_survey"
+
+form_smys <- as.formula(paste(response_logc, "~", smys, "+", paste0("(1 | ", random_effects, ")", collapse = " + ")))
+
+random_effects2 <- c("year", "affiliated_mpa", "region4")
+
+form_smys2 <- as.formula(paste(response_logc, "~", smys, "+", paste0("(1 | ", random_effects2, ")", collapse = " + ")))
+
+ms <- lmer(form_smys, data = data4_south)
+attr(ms, "name") <- "South"
+
+mc <- lmer(form_smys, data = data4_central)
+attr(mc, "name") <- "Central"
+
+mn <- lmer(form_smys, data = data4_north)
+attr(mn, "name") <- "North"
+
+mci <- lmer(form_smys, data = data4_ci)
+attr(mci, "name") <- "N. Channel Islands"
+
+m_drop_ci <- lmer(form_smys2, data = data4_drop_ci)
+attr(m_drop_ci, "name") <- "Drop NCI"
+
+m_drop_s <- lmer(form_smys2, data = data4_drop_s)
+attr(m_drop_s, "name") <- "Drop S"
+
+m_drop_sites <- lmer(form_smys2, data = data_drop_sites)
+attr(m_drop_sites, "name") <- "Drop Sites"
+
+```
+
+```{r}
+par(mfrow = c(2, 4)) 
+
+plot(residuals(mci) ~ fitted(mci), main = attr(mci, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(mci), residuals(mci)), col = "blue", lwd = 2)
+
+plot(residuals(ms) ~ fitted(ms), main = attr(ms, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(ms), residuals(ms)), col = "blue", lwd = 2)
+
+plot(residuals(mc) ~ fitted(mc), main = attr(mc, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(mc), residuals(mc)), col = "blue", lwd = 2)
+
+plot(residuals(mn) ~ fitted(mn), main = attr(mn, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(mn), residuals(mn)), col = "blue", lwd = 2)
+      
+qqnorm(residuals(mci), main = paste(attr(mci, "name")), cex.main = 0.8); qqline(residuals(mci))
+qqnorm(residuals(ms), main = paste(attr(ms, "name")), cex.main = 0.8); qqline(residuals(ms))
+qqnorm(residuals(mc), main = paste(attr(mc, "name")), cex.main = 0.8); qqline(residuals(mc))
+qqnorm(residuals(mn), main = paste(attr(mn, "name")), cex.main = 0.8); qqline(residuals(mn))
+
+```
+
+```{r}
+library(ggplot2)
+
+data_subset <- data_sp %>% 
+  group_by(bioregion, region4, affiliated_mpa, site, site_type) %>% 
+  summarize(total = sum(kg_per_100m2),
+            n_years = length(unique(year)))
+
+data_subset$fitted <- fitted(m_drop_s)
+data_subset$residuals <- residuals(m_drop_s)
+
+ggplot(data_subset, aes(x = fitted, y = residuals, color = site)) + 
+  geom_point(alpha = 0.6) +
+  geom_hline(yintercept = 0, linetype = "dashed", color = "black") +
+  theme_minimal() +
+  labs(x = "Fitted Values", y = "Residuals") +
+  facet_wrap(~affiliated_mpa)
+
+```
+
+```{r}
+par(mfrow = c(2, 3))
+
+plot(residuals(m_drop_ci) ~ fitted(m_drop_ci), main = attr(m_drop_ci, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(m_drop_ci), residuals(m_drop_ci)), col = "blue", lwd = 2)
+
+plot(residuals(m_drop_s) ~ fitted(m_drop_s), main = attr(m_drop_s, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(m_drop_s), residuals(m_drop_s)), col = "blue", lwd = 2)
+
+plot(residuals(m_drop_sites) ~ fitted(m_drop_sites), main = attr(m_drop_sites, "name"))
+abline(h = 0, col = "red", lty = 2)
+lines(lowess(fitted(m_drop_sites), residuals(m_drop_sites)), col = "blue", lwd = 2)
+
+qqnorm(residuals(m_drop_ci), main = paste(attr(m_drop_ci, "name")), cex.main = 0.8); qqline(residuals(m_drop_ci))
+qqnorm(residuals(m_drop_s), main = paste(attr(m_drop_s, "name")), cex.main = 0.8); qqline(residuals(m_drop_s))
+qqnorm(residuals(m_drop_sites), main = paste(attr(m_drop_sites, "name")), cex.main = 0.8); qqline(residuals(m_drop_sites))
+
+```
+
+```{r}
+# Set up the formula
+response_logc <- "log_kg_per_100m2_c"
+random_effects <- c("year", "affiliated_mpa", "region4")
+
+smys <- "depth_cv_500 * site_type + kelp_annual_500 * site_type + hard_bottom_250 * site_type + site_type * age_at_survey"
+
+form_smys <- as.formula(paste(response_logc, "~", smys, "+", paste0("(1 | ", random_effects, ")", collapse = " + ")))
+
+ms <- lmerTest::lmer(form_smys, data = data_sp)
+attr(ms, "name") <- "South"
+
+
+
+# Define constant = minimum nonzero biomass
+const <- data_kelp %>% 
+  filter(kg_per_m2 > 0) %>% 
+  group_by(bioregion) %>% 
+  summarize(min = min(kg_per_m2)*10)
+
+const_s <- const$min[const$bioregion == "South"]
+const_c <- const$min[const$bioregion == "Central"]
+const_n <- const$min[const$bioregion == "North"]
+
+const4 <- data_kelp %>% 
+  filter(kg_per_m2 > 0) %>% 
+  group_by(region4) %>% 
+  summarize(min = min(kg_per_m2)*10)
+
+const4_s  <- const4$min[const4$region4 == "South"]
+const4_c  <- const4$min[const4$region4 == "Central"]
+const4_n  <- const4$min[const4$region4 == "North"]
+const4_ci <- const4$min[const4$region4 == "N. Channel Islands"]
+
+data_south <- data_kelp %>% 
+  filter(bioregion == "South") %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const_s)) %>% 
+  mutate(year = as.factor(year),
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+data_central <- data_kelp %>% 
+  filter(bioregion == "Central") %>% 
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const_c)) %>% 
+  mutate(year = as.factor(year),
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+data_north <- data_kelp %>% 
+  filter(bioregion == "North") %>%
+  mutate(log_kg_per_m2_c = log(kg_per_m2 + const_n)) %>% 
+  mutate(year = as.factor(year),
+         bioregion = as.factor(bioregion),
+         affiliated_mpa = as.factor(affiliated_mpa)) %>% 
+  # Scale all predictors 
+  mutate_at(vars(grep("^hard|soft|depth|kelp|age_at", names(.), value = TRUE)), scale)
+
+# Set up the formula
+response_logc <- "log_kg_per_m2_c"
+random_effects <- c("year", "affiliated_mpa")
+
+smys <- "depth_cv_500 * site_type + kelp_annual_500 * site_type + hard_bottom_250 * site_type + site_type * age_at_survey"
+
+form_smys <- as.formula(paste(response_logc, "~", smys, "+", paste0("(1 | ", random_effects, ")", collapse = " + ")))
+
+ms <- lmerTest::lmer(form_smys, data = data_south)
+attr(ms, "name") <- "South"
+
+mc <- lmer(form_smys, data = data_central)
+attr(mc, "name") <- "Central"
+
+mn <- lmer(form_smys, data = data_north)
+attr(mn, "name") <- "North"
+
+
+check_model(ms, residual_type = "simulated", check = c("ncv", "qq", "normality", "vif"))
+check_model(mc, residual_type = "simulated", check = c("ncv", "qq", "normality", "vif"))
+check_model(mn, residual_type = "simulated", check = c("ncv", "qq", "normality", "vif"))
+
+
+```
